--- a/style.css
+++ b/style.css
@@ -2,6 +2,9 @@ body {
     margin: 0;
     font-family: sans-serif;
     height: 100%;
+    background-color: #112;
+    color: white;
+    color-scheme: dark;
 }
 
 .main {
@@ -15,7 +18,7 @@ body {
 }
 
 hr {
-    border: 1px black solid;
+    border: 1px rgb(209, 211, 188) solid;
     margin-left: 0px;
     margin-right: 0px;
     margin-top: 4px;
@@ -43,7 +46,7 @@ input[type="number"] {
 
 details {
     border-spacing: 0;
-    border: 1px black solid;
+    border: 1px rgb(209, 211, 188) solid;
     width: 17em;
 }
 
@@ -53,7 +56,7 @@ summary {
     font-size: 10pt;
     padding-left: 5px;
     user-select: none;
-    border-bottom: 1px black solid;
+    border-bottom: 1px black solid; 
 }
 
 #path_canvas {
